# claude-project-roleplays

./: .gitignore  README.md
BestPractices/: compass_artifact_wf-1eb497ff-01f9-419b-b6f8-9676ca541c99_text_markdown.md
projects/: CHARACTER_SCHEMA_UNIVERSAL_LLM_RP_v1.0.md  CHARACTER_SCHEMA_v1.0.md  DiscoveryRule.txt  PROJECT_SUBSTRATE_TEST_PLAN.md  RAG_PROJECT_EXPERIMENT_TEMPLATE.json  RAG_PROJECT_EXPERIMENT_TEMPLATE.md  RAG_PROJECT_EXPERIMENT_TEMPLATE.xml  _MASTER_DATABASE_SCHEMA.md  _master_schema.sql  character_template_st.json  character_template_universal_llm_roleplay.json  character_template_universal_llm_roleplay_dossier.md  character_template_universal_llm_roleplay_rag.xml
projects/Fallout/Vault 49/: KNOWLEDGE_1_Residents.md  KNOWLEDGE_2_Locations.md  KNOWLEDGE_3_Events.md  KNOWLEDGE_4_Hidden.md  KNOWLEDGE_5_Anachronisms.md  KNOWLEDGE_6_Utility.md  KNOWLEDGE_7_NPC_Maps.md  PROJECT_INSTRUCTIONS.md  PROJECT_README.md  Vault49Play2_cleaned.md  vault49-tracker.jsx
projects/Fallout/Vault 83/: KNOWLEDGE_1_Residents.md  KNOWLEDGE_2_Locations.md  KNOWLEDGE_3_Events.md  KNOWLEDGE_4_Hidden.md  KNOWLEDGE_5_Anachronisms.md  KNOWLEDGE_6_Utility.md  KNOWLEDGE_7_PipBoy.md  KNOWLEDGE_8_NPC_Maps.md  PROJECT_INSTRUCTIONS.md  PROJECT_INSTRUCTIONS_journal_addition.md  PROJECT_README.md  Vault83_Build_Commitment_Summary.md  vault83  shorter.txt  vault83-cards-README.md  vault83-tracker.jsx
projects/Fallout/Vault 83/vault83-state/: README.md  pyproject.toml
projects/Fallout/Vault 83/vault83-state/src/vault83_state/: __init__.py  launch.py  schema.py  server.py  store.py  supabase_client.py  supabase_tools.py
projects/Fallout/Vault 83/vault83-state/tests/: test_smoke.py
projects/Fallout/Vault 83/vault83-tracker-app/src-tauri/: Cargo.toml  tauri.conf.json
projects/Fallout/Vault 83/vault83-tracker-app/src-tauri/src/: lib.rs  main.rs  services.rs
projects/Harry Potter/Marauders/: CAST_COMPENDIUM_FULL.md  CAST_ROSTER.md  HP_Instructions (2).md  Harry Potter Lore and TTRPG Report.md  INVENTORY_REFERENCE.md  KNOWLEDGE_1_Cast.md  KNOWLEDGE_2_Locations.md  KNOWLEDGE_3_Era_and_Events.md  KNOWLEDGE_4_Hidden.md  KNOWLEDGE_5_Magic_and_Wandlore.md  KNOWLEDGE_6_Canon_Figures.md  KNOWLEDGE_7_Utility.md  KNOWLEDGE_USER_Caleb.md  MARAUDERS_TOOLING.md  PERSISTENCE.md  PROJECT_INSTRUCTIONS.md  SETUP.md  build_tracker.py  marauders-console.jsx  marauders-inventory-ledger.jsx  marauders-narrator.skill  marauders-tracker-edit.html  marauders-tracker-live.html  marauders-tracker.html  marauders_lore_report.md  marauders_lore_report_v2.md  wandcraft_preservation_and_binding.md
projects/Harry Potter/Marauders/marauders-state-mcp/: FULL_TRIAL_README.md  README.md  embed_menu.py  eval_queries.json  eval_results.json  eval_results.md  eval_run.py  full_progress.json  full_results.json  full_results.md  full_skipped.json  full_trials.py  pyproject.toml  requirements.txt  server.py  trials.py  trials_sampled.py  vectorlab.py
projects/Mass Effect/Perseus/: CHARACTER_CARD_PROMPTS.md  KNOWLEDGE_1_Crew.md  KNOWLEDGE_2_Locations.md  KNOWLEDGE_3_Events.md  KNOWLEDGE_4_Hidden.md  KNOWLEDGE_5_Lore_Constraints.md  KNOWLEDGE_6_Utility.md  KNOWLEDGE_7_Omnitool.md  KNOWLEDGE_8_NPC_Maps.md  PROJECT_INSTRUCTIONS.md  PROJECT_README.md  perseus-tracker.jsx
projects/Pirates/Hjalmar/: KNOWLEDGE_1_NPCs.md  KNOWLEDGE_2_Locations.md  KNOWLEDGE_3_Events.md  KNOWLEDGE_4_Hidden.md  KNOWLEDGE_5_Era.md  KNOWLEDGE_6_Utility.md  KNOWLEDGE_7_Factions.md  KNOWLEDGE_8_NPC_Maps.md  PROJECT_INSTRUCTIONS.md  PROJECT_INSTRUCTIONS_stage1_formatted.md  PROJECT_INSTRUCTIONS_stage1_formatted_gemini.xml  PROJECT_INSTRUCTIONS_stage2_llm_effective.md
projects/Project Hollis/: CAST_CREW.md  CAST_OUTSIDERS.md  CAST_VICTIMS_AND_PAST.md  DESIGN_AND_RUNNING.md  PROJECT_INSTRUCTIONS.md  THE_CASE.md
projects/The Expanse/Shaula/: CHARACTER_SCHEMA_Shaula_v1_0.md  (+15 more)
projects/The Last of Us/Allegheny/narrator-state/: README.md  pyproject.toml
projects/The Last of Us/Allegheny/narrator-state/src/narrator_state/: __init__.py  launch.py  launch_compat.py  schema.py  server.py  server_rest_patch.py  store.py  supabase_client.py  supabase_tools.py
projects/The Last of Us/Allegheny/narrator-state/tests/: test_smoke.py
(+1292 files in other folders)
