[project]
name = "marauders-state"
version = "0.1.0"
description = "Live FastMCP state server over the Marauders campaign JSON (with holystone recall mounted)"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2"]

[project.optional-dependencies]
http = ["uvicorn", "starlette"]

[project.scripts]
marauders-state = "server:main"

[tool.setuptools]
py-modules = ["server"]
