[package]
name = "vault83-tracker"
version = "0.1.0"
description = "Vault 83 vault83-state tracker"
authors = ["Caleb"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "vault83_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
